# provinsi/request.go
@@ -1,0 +1,7 @@
+package provinsi
+
+type ProvinsiRequest struct {
+	IdProvinsi   int
+	KodeProvinsi int
+	NamaProvinsi string
+}
